fix: margin left location rating on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,11 @@ body {
   display: flex;
   align-items: center;
 }
+@media only screen and (max-width: 37.5em) {
+  .overview__location {
+    margin-left: 1.8rem;
+  }
+}
 .overview__icon-location {
   margin-right: 0.5rem;
 }
