--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -341,6 +341,10 @@
     font-size: 1.2rem;
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      margin-left: 1.8rem;
+    }
   }
 
   &__icon-location {
